--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
 
             <!-- DUBAI CARD -->
             <div class="destination-card" onclick="showJourney('dubai')" style="width: 300px; height: 400px; border-radius: 20px; overflow: hidden; cursor: pointer; position: relative; transition: transform 0.3s ease;">
-                <img src="Abu Dhabi skyline , United Arab Emirates.jpeg" 
+                <img src="United Arab Emirates.jpeg" 
                      alt="Dubai" style="width: 100%; height: 100%; object-fit: cover;">
                 <div class="card-content" style="position: absolute; bottom: 20px; left: 20px; color: white; text-shadow: 0 2px 8px rgba(0,0,0,0.7);">
                     <h3 style="margin: 0;">Dubai</h3>
